# Batsim_Test_1

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  batprotocol.fbs  build.ninja  default.nix  flake.nix  meson.build  power_probe.cpp  power_probe.hpp  schema1.fbs
cmake/Modules/: FindBatprotocol.cmake
cpp/: meson.build
cpp/src/: assert.hpp  batprotocol.cpp  batprotocol.hpp  create_probe.cpp  create_probe.hpp  edc_hello.cpp  edc_hello.hpp  execute_job.cpp  execute_job.hpp  job.cpp  job.hpp  kill.cpp  kill.hpp  message_builder.cpp  message_builder.hpp  probe_data.cpp  probe_data.hpp  profile.cpp  profile.hpp  schema.hpp.in  simulation_begins.cpp  simulation_begins.hpp  temporal_trigger.cpp  temporal_trigger.hpp  time_specifier.cpp  time_specifier.hpp  util.cpp  util.hpp  version.cpp  version.hpp
cpp/test/: README.md  example_all_static_external_events_injected.cpp  example_all_static_jobs_submitted.cpp  example_batsim_hello.cpp  example_call_me_later.cpp  example_create_probe.cpp  example_edc_hello.cpp  example_execute_job.cpp  example_finish_registration.cpp  example_force_simulation_stop.cpp  example_job_completed.cpp  example_job_submitted.cpp  example_jobs_killed.cpp  example_kill_jobs.cpp  example_probe_data_emitted.cpp  example_register_job.cpp  example_register_profile.cpp  example_reject_job.cpp  example_requested_call.cpp  example_reset_probe.cpp  example_simulation_begins.cpp  example_simulation_ends.cpp  example_stop_call_me_later.cpp  example_stop_probe.cpp  example_trigger_probe.cpp  getting-started.cpp  hello-and-json.cpp  helpers.cpp  helpers.hpp  meson.build  test_example_all_static_external_events_injected.cpp  test_example_all_static_jobs_submitted.cpp  test_example_batsim_hello.cpp  test_example_call_me_later.cpp  test_example_create_probe.cpp  test_example_edc_hello.cpp  test_example_execute_job.cpp  test_example_finish_registration.cpp  test_example_force_simulation_stop.cpp  test_example_job_completed.cpp  (+18 more)
cpp/tests/: meson.build
docs/: api.rst  conf.py  getting-started.rst  index.rst  installation.rst  protocol-definition.rst
docs/expected-output/: example_all_static_external_events_injected-simple.json  example_all_static_jobs_submitted-simple.json  example_batsim_hello-simple.json  example_call_me_later-one_shot.json  example_call_me_later-periodic.json  example_call_me_later-periodic_10s.json  example_call_me_later-periodic_500ms.json  example_call_me_later-periodic_finite.json  example_create_probe-accumulate_sum_no_reset.json  example_create_probe-accumulate_sum_reset.json  example_create_probe-emission_filtering_threshold.json  example_create_probe-one_shot.json  example_create_probe-periodic.json  example_create_probe-resource_aggregation_arithmetic_mean.json  example_create_probe-resource_aggregation_max.json  example_create_probe-resource_aggregation_median.json  example_create_probe-resource_aggregation_min.json  example_create_probe-resource_aggregation_quantile_func.json  example_create_probe-resource_aggregation_sum.json  example_edc_hello-compute_sharing.json  example_edc_hello-feature1.json  example_edc_hello-feature2.json  example_edc_hello-feature3.json  example_edc_hello-feature4.json  example_edc_hello-feature5.json  example_edc_hello-feature6.json  example_edc_hello-feature7.json  example_edc_hello-job_alloc_validation_strategy.json  example_edc_hello-no_storage_sharing.json  example_edc_hello-simple.json  example_execute_job-custom_placement.json  example_execute_job-predefined_placement.json  example_execute_job-simple.json  example_execute_job-storage_mapping.json  example_execute_job-subprofile_placement.json  example_external_decision_component_hello-compute_sharing.json  example_external_decision_component_hello-feature1.json  example_external_decision_component_hello-feature2.json  example_external_decision_component_hello-feature3.json  example_external_decision_component_hello-feature4.json  (+52 more)
nix/: batprotocol-cpp.nix  batsched.nix  cpp-coverage-report.nix  cpp-test-binary.nix  cpp-test.nix  sphinx-doc.nix
py/: setup.py
py/tests/: hello.py  test_hello.py
rust/: .gitignore  Cargo.toml
rust/src/: lib.rs
rust/tests/: hello.rs
src/: main.cpp
src/algo/: PowerProbe.cpp  PowerProbe.hpp  batprotocol.hpp  easy_bf_fast.cpp  easy_bf_fast.hpp  edc_hello.hpp  energy_bf.cpp  power_probe.cpp  sequencer_dvfs.cpp  sequencer_dvfs.hpp
tests/: union-vector.cpp  union-vector.py
tests/go/src/framagit.org/batsim/: ByeEvent.go  Event.go  EventUnion.go  HelloEvent.go  Message.go  union_vector_test.go
tests/rust/: Cargo.toml
tests/rust/src/: main.rs
